<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30sp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/selecttime"
                android:textSize="30dip" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/buttonThirty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thirtysecond"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/buttonFiveMinute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fiveminute"
                    android:textSize="30dip" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/selectcall"
                android:textSize="30dip" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/buttonMother"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strmother"
                    android:textSize="30dip" />

                <Button
                    android:id="@+id/buttonMyLove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strlove"
                    android:textSize="30dip" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/selectvoice"
                android:textSize="30dip" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <Button
                    android:id="@+id/buttonMrs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/strmother"
                    android:textSize="20dip" />

                <Button
                    android:id="@+id/buttonGirl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/strgirl"
                    android:textSize="15dip" />

                <Button
                    android:id="@+id/buttonBoy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/strboy"
                    android:textSize="15dip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textSize="32sp" />
    </LinearLayout>

</LinearLayout>