<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/OriginalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/OriginalCallTitle"
        android:textSize="20sp" />

    <TimePicker
        android:id="@+id/OriginaltimePicker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="10dip" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/defaultcall"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/OriginalEditName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PhoneNumber"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/OriginalEditPhoneNum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Bell"
                android:layout_weight="1"
                android:textSize="20sp" />
            <Button 
                android:id="@+id/OriginalButtonBell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/DefaultBell"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Vibrate"
                android:layout_weight="0.5"
                android:textSize="20sp" />
            
            <CheckBox 
                android:id="@+id/OriginalCheckVibrate"
               	android:layout_width="0dp"
               	android:layout_weight="0.5"
               	android:layout_height="wrap_content"
               	/>
			            
        </LinearLayout>
        <Button 
            android:id="@+id/OriginalConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/confirm"/>
    </LinearLayout>

</LinearLayout>